Miscalenious changes and fixes.
Remove is_data_table_visible and is_interactive fields for now.
Add 'delete' link for image charts.
Add 'delete' link for image reports.
Filter out test cases with no measurements when selecting them in
filter.
Error handling for empty added filters is now fixed.
Chart data now tied to 'alias' field anymore but to unique test name.
Fix URL mess so the breadcrumbs can work properly.
Change bars behaviour on chart, they now overlap less.
Change the color of the dashed target goal line.
Add owner to ImageReport model and low level image report acl.

--- a/dashboard_app/static/dashboard_app/css/image-charts.css
+++ b/dashboard_app/static/dashboard_app/css/image-charts.css
@@ -58,6 +58,11 @@ div.selector .selector-chosen select {
     margin-bottom: 10px;
 }
 
+.chart-title a {
+    float: right;
+    margin-left: 20px;
+}
+
 .errors {
     color: red;
 }
